tests/SyntaxError/Test25/test25.c
int main()
{
	int i=0;	
	for (i=0; i<10; int j=i+1 ){
		int a=i*2;	
	}

}

